# LearnCleanC

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
src/saxpy/: CMakeLists.txt  gpu_kernel.cu  gpu_kernel.h  main.c  parallel_kernel.c  parallel_kernel.h  perf.data  perf.data.old  plain_kernel.c  plain_kernel.h  profiling_results.md  restrict_kernel.c  restrict_kernel.h  saxpy_par1  saxpy_par2  saxpy_plain  saxpy_r
src/saxpy/include/: parallel_kernel.h  plain_kernel.h
src/saxpy/kernels/: gpu_kernel.cu  parallel_kernel.c  plain_kernel.c  restrict_kernel.c
src/squared_arr/: CMakeLists.txt  main.c  squared_array.c  squared_array.h
